[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.12.0"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
serde = "1.0.130"

